--- a/170501036_FerdiKandemir_v2/170501036_FerdiKandemir_v2.csproj
+++ b/170501036_FerdiKandemir_v2/170501036_FerdiKandemir_v2.csproj
@@ -33,7 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,30 +50,48 @@
   <ItemGroup>
     <Compile Include="Admin.cs" />
     <Compile Include="Fall.cs" />
+    <Compile Include="rechtsAnwaltSeite.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="rechtsAnwaltSeite.Designer.cs">
+      <DependentUpon>rechtsAnwaltSeite.cs</DependentUpon>
+    </Compile>
+    <Compile Include="loginSeite.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loginSeite.Designer.cs">
+      <DependentUpon>loginSeite.cs</DependentUpon>
+    </Compile>
     <Compile Include="Klaeger.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Rechtsanwalt.cs" />
+    <Compile Include="Rechtsbuero_DBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Rechtsbuero_DBDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Rechtsbuero_DBDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Rechtsbuero_DBDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="TeamLead.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="adminSeite.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="adminSeite.Designer.cs">
+      <DependentUpon>adminSeite.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rechtsbuero_DBDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Rechtsbuero_DBDataSet.xsd</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="adminSeite.resx">
+      <DependentUpon>adminSeite.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rechtsAnwaltSeite.resx">
+      <DependentUpon>rechtsAnwaltSeite.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="loginSeite.resx">
+      <DependentUpon>loginSeite.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
